--- a/open_trails/templates/error-missing-segment-id.html
+++ b/open_trails/templates/error-missing-segment-id.html
@@ -1,1 +1,82 @@
-Placeholder file for forthcoming error HTML.
+<!DOCTYPE html>
+<html lang="en-us">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Code for America</title>
+
+ 	<!-- LEAFLET -->
+
+    <!-- CODE FOR AMERICA STYLES -->
+    <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6435252/678502/css/fonts.css" />
+    <link rel="stylesheet" href="http://style.codeforamerica.org/0/style/css/main.css">
+    <link rel="stylesheet" href="http://style.codeforamerica.org/0/style/css/layout.css" media="all and (min-width: 40em)">
+    <link href="http://style.codeforamerica.org/0/style/css/prism.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="apple-touch-icon-precomposed" href="http://style.codeforamerica.org/0/style/favicons/60x60/flag-red.png"/>
+
+    <!--[if lt IE 9]>
+        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!--[if (lt IE 9)&(gt IE 6)&(!IEMobile)]>
+        <link rel="stylesheet" href="http://style.codeforamerica.org/0/style/css/layout.css" media="all">
+    <![endif]-->
+
+	<!-- CUSTOM STYLES -->
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}" />
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+</head>
+
+<html>
+	<body>
+		{% include "headline.html" %}
+		<section class="layout-semibreve">
+			<table>
+				<thead>
+				<tr>
+					<th colspan="5">Excerpt from the Open Trail System Specification</th>
+				</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							<b>Field Name</b>
+						</td>
+						<td>
+							<b>Data Type</b>
+						</td>
+						<td>
+							<b>Required?</b>
+						</td>
+						<td>
+							<b>Description</b>
+						</td>
+						<td>
+							<b>Values</b>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							segment_id
+						</td>
+						<td>
+							string matching a value in the “id” field of stewards.csv
+						</td>
+						<td>
+							yes
+						</td>
+						<td>
+							A unique identifier assigned by the data producer. The “Named Trails” described in named_trails.csv are constructed with arrays of trail segments, identified via this field.
+						</td>
+						<td>
+							“yes” or “no”
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</section>
+		{% include "script-olark.html" %}
+	</body>
+</html>
