--- a/open_trails/templates/dataset-01-upload-segments.html
+++ b/open_trails/templates/dataset-01-upload-segments.html
@@ -32,7 +32,7 @@
 <body>
     {% include "headline.html" %}
     {% include "under-development.html" %}
-    {% include "step-tracker-placeholder.html" %}
+    {% include "step-tracker.html" %}
 
     <section class="layout-semibreve">
         <h3 class="h3">Upload your trail data</h3>
