--- a/open_trails/templates/dataset-03-transformed-segments.html
+++ b/open_trails/templates/dataset-03-transformed-segments.html
@@ -55,7 +55,7 @@
                     {% elif level == 'error' %}
                         <li class="alert-failure"><a href="/errors/{{ id }}">{{ words }}</a></li>
                     {% else %}
-                        <li class="alert"><a href="/errors/{{ id }}">{{ words }}</a></li>
+                        <li class="alert"><a href="/errors/{{ id }}">{{% words }}</a></li>
                     {% endif %}
                 {% endfor %}
             </ul>
