--- a/open_trails/templates/index.html
+++ b/open_trails/templates/index.html
@@ -31,7 +31,7 @@
 
 <body>
     {% include "headline-home.html" %}
-    {% include "under-development.html" %}
+    {% include "under-development-home.html" %}
     <div class="layout-semibreve">
         <h4>About OpenTrails</h4>
 
