--- a/open_trails/templates/dataset-02-show-sample-segment.html
+++ b/open_trails/templates/dataset-02-show-sample-segment.html
@@ -32,35 +32,37 @@
 <body>
     {% include "headline.html" %}
     {% include "under-development.html" %}
-    {% include "step-tracker-placeholder.html" %}
+    {% include "step-tracker.html" %}
 
-    <section class="layout-semibreve">
-        <h4>Upload Successful.</h4>
-        <p>You've uploaded a shapefile that contains all of the data we need to get started with the conversion. Before we move forward, review the sample data below. We've included all of the field names from the data you uploaded, and a sample value.</p>
-        <form action="/datasets/{{ dataset.id }}/transform-segments" method=post>
-            <p>
-                <button>Transform</button>
-            </p>
-        </form>
-    </section>
+    <div class="slab-gray">
+        <section class="layout-semibreve">
+            <h4>Upload Successful.</h4>
+            <p>You've uploaded a shapefile that contains all of the data we need to get started with the conversion. Before we move forward, review the sample data below. We've included all of the field names from the data you uploaded, and a sample value.</p>
+            <form action="/datasets/{{ dataset.id }}/transform-segments" method=post>
+                <p>
+                    <button>Transform</button>
+                </p>
+            </form>
+        </section>
 
-    <section class="layout-semibreve">
-        <table id="original-sample">
-            <thead>
-                <tr>
-                    <th colspan="5">A Sample of Your Data</th>
-                </tr>
+        <section class="layout-semibreve">
+            <table id="original-sample">
+                <thead>
+                    <tr>
+                        <th colspan="5">A Sample of Your Data</th>
+                    </tr>
 
-            </thead>
-            <tbody>
-                <tr>
-                    <td><b>Field Name</b></td>
-                    <td><b>Sample Value</b></td>
-                </tr>
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><b>Field Name</b></td>
+                        <td><b>Sample Value</b></td>
+                    </tr>
+                </tbody>
+            </table>
 
-    </section>
+        </section>
+    </div>
 
         <script>
             var geojson = {{ sample_segment | tojson | safe }}
