--- a/open_trails/templates/dataset-03-transformed-segments.html
+++ b/open_trails/templates/dataset-03-transformed-segments.html
@@ -33,7 +33,7 @@
 
     {% include "headline.html" %}
     {% include "under-development.html" %}
-    {% include "step-tracker-placeholder.html" %}
+    {% include "step-tracker.html" %}
 
     <section class="layout-semibreve">
         {% if transform_succeeded %}
@@ -55,7 +55,7 @@
                     {% elif level == 'error' %}
                         <li class="alert-failure"><a href="/errors/{{ id }}">{{ words }}</a></li>
                     {% else %}
-                        <li class="alert"><a href="/errors/{{ id }}">{{% words }}</a></li>
+                        <li class="alert"><a href="/errors/{{ id }}">{{ words }}</a></li>
                     {% endif %}
                 {% endfor %}
             </ul>
