--- a/open_trails/templates/dataset-04-named-trails.html
+++ b/open_trails/templates/dataset-04-named-trails.html
@@ -32,7 +32,8 @@
 <body>
     {% include "headline.html" %}
     {% include "under-development.html" %}
-    {% include "step-tracker-placeholder.html" %}
+    {% include "step-tracker.html" %}
+
     <section class="layout-semibreve">
         <p>Download <a href="/datasets/{{ dataset.id }}/open-trails.zip">open-trails.zip</a> so far.</p>
     </section>
