--- a/open_trails/templates/index.html
+++ b/open_trails/templates/index.html
@@ -30,8 +30,9 @@
 </head>
 
 <body>
-    {% include "headline-home.html" %}
-    {% include "under-development-home.html" %}
+    {% include "headline.html" %}
+    {% include "under-development.html" %}
+    {% include "step-tracker.html" %}
     <div class="layout-semibreve">
         <h4>About OpenTrails</h4>
 
