--- a/open_trails/templates/dataset-01-upload-segments.html
+++ b/open_trails/templates/dataset-01-upload-segments.html
@@ -32,42 +32,49 @@
 <body>
     {% include "headline.html" %}
     {% include "under-development.html" %}
-    {% include "step-tracker.html" %}
 
-    <div class="slab-gray">
-        <section class="layout-semibreve">
-            <h3 class="h3">1. Upload your trail data</h3>
-            <h4 class="h4">Prepare a single ZIP file containing the data you would like to convert, and upload it here.</h4>
-            <p>Upload a <b>zipped</b> shapefile that describes your trail network. This data should be a 'polyline' file that represents the actual paths a trail takes. Most often, many individual features or "segments" are used to described the entirety of a "named trail".</p>
-            <div class="layout-minim">
-                <form action="/datasets/{{ dataset.id }}/upload" method=post enctype=multipart/form-data>
-                    <p>
-                        <input type=file name=file>
-                        <input type=hidden name="trailtype" value="segments">
-                        <input type=submit value=Upload>
-                    </p>
-                </form>
-            </div>
-            <div class="layout-minim">
-                <ul>
-                    <p>As you probably know, a "shapefile" is actually a set of several files. To use this converter, we require the following files be included in a single zipped upload:</p>
-                    <li>.shp</li>
-                    <li>.shx</li>
-                    <li>.dbf</li>
-                    <li>.prj</li>
-                </ul>
-            </div>
-        </section>
-    </div>
+<!-- Step tracker -->
+    <ol class="steps-tracker" data-steps="4">
+        <li id="step1"class="step-active h6">Upload Shapefiles
+        </li><!--
+     --><li id="step2" class="step-todo h6">Review & Convert
+        </li><!--
+     --><li id="step3" class="step-todo h6">Extract Named Trails</li><!--
+     --><li id="step4" class="step-todo h6">Download OpenTrails</li>
+    </ol>
 
-    <!-- Step Tracker Script -->
-    <script>
-        $(window).load(function(){
-            $("ol.steps-tracker").each(function(){
-                $(this).attr("data-steps",
-                    $(this).children("li").length);
-            });
-        })
-    </script>
+    <section class="layout-semibreve">
+        <div class="badge-heading">
+            <h3 class="h3 badge-heading-h3-fix">Start by uploading your trail data.</h3>
+        </div>
+        <div class="layout-minim">
+            <h4>ZIP up your shapefile</h4>
+            <p>Upload a <b>zipped</b> shapefile that describes your trail network. This data should be a 'polyline' file that represents the actual paths a trail takes.</p>
+            <ul>
+                <p>As you probably know, a "shapefile" is actually a set of several files. To use this converter, we require the following files be included in a single zipped upload:</p>
+                <li>.shp</li>
+                <li>.shx</li>
+                <li>.dbf</li>
+                <li>.prj</li>
+            </ul>
+        </div>
+        <div class="layout-minim">
+            <h4>What we are expecting</h4>
+            <p>This tool expects to receive a shapefile with many features, each representing a segment of trail. We expect each of those segments to have attributes about their location, condition, and appropriate use. This tool will keep those fields relevant in OpenTrails, and discard the rest.</p>
+
+            <p>Moreover, we expect many segments to only compose a portion of a trail. We will pull out all of the trail names, and create a seperate file called "named_trails.csv", associating each segment with the trail in its entirety.</p>
+            <br>
+            <form action="/datasets/{{ dataset.id }}/upload" method=post enctype=multipart/form-data>
+                <p>
+                    <input type=file name=file style="width:50%">
+                    <input type=hidden name="trailtype" value="segments">
+                    <input type=submit value=Upload>
+                </p>
+            </form>
+        </div>
+        <div class="layout-minim">
+
+        </div>
+    </section>
 </body>
 </html>
