--- a/open_trails/templates/under-development.html
+++ b/open_trails/templates/under-development.html
@@ -1,8 +1,6 @@
 <div class="alert alert-fix">
-	<div class="layout-semibreve badge-heading-layout-fix">
-		<div class="badge-heading-fix badge-heading badge-github">
-	        <h4 class="badge-heading-h4-fix">This tool is under active development.</hr>
-	        <a href="http://github.com/codeforamerica/plats">Learn More.</a>
+	<div class="layout-semibreve semibreve-alert">
+	        <h5 class="semibreve-alert-header">This tool is incomplete and under active development. <a href="http://github.com/codeforamerica/plats">Learn More.</a></h5>
 		</div>
 	</div>
 </div>
