--- a/open_trails/static/css/app.css
+++ b/open_trails/static/css/app.css
@@ -18,6 +18,13 @@
 
 /* Custom Styles */
 
+/* Converter vs. Validator Styles */
+
+.minim-staccato-button {
+  width: 100%;
+  height: 100%;
+}
+
 /* Converter title */
 
 .converter-title {
@@ -63,6 +70,14 @@
 
 .badge-heading-h3-fix {
   padding-top: .25em;
+}
+
+/* Adaptation of App Teaser for side-by-side comparison of Converter and Validator */
+
+.teaser-masthead h3 {
+  text-align: center;
+  vertical-align: middle;
+  margin: 1em;
 }
 
 /* Progress Tracker */
